--- a/requirements_Elysia.txt
+++ b/requirements_Elysia.txt
@@ -17,8 +17,10 @@ charset-normalizer==3.4.1
 chinese_calendar==1.10.0
 click==8.1.8
 colorama==0.4.6
+commonX==0.6.37
 crypto==1.4.1
 cryptography==44.0.2
+curl_cffi==0.10.0
 dashscope==1.22.2
 distro==1.9.0
 exceptiongroup==1.2.2
@@ -45,6 +47,7 @@ imageio-ffmpeg==0.6.0
 iso8601==2.1.0
 Jinja2==3.1.6
 jiter==0.9.0
+jmcomic==2.5.32
 lazy-object-proxy==1.10.0
 loguru==0.7.3
 lunardate==0.2.2
@@ -52,6 +55,7 @@ Markdown==3.7
 MarkupSafe==3.0.2
 multidict==6.2.0
 Naked==0.1.32
+natsort==8.4.0
 nonebot-adapter-qq==1.6.2
 nonebot-plugin-htmlrender==0.6.2
 nonebot2==2.4.2
