feat(jm_download): 添加二维码下载 优化错误处理

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,9 @@ src/clover_lightnovel/wenku8.cookie
 src/clover_lightnovel/output1.html
 *.pyc
 /src/resources/image/jm/*
+
+
+Elysia
+runtime
+/src/configs/tts
+bot.pid
