--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,10 @@ bili.cookie
 src/clover_lightnovel/wenku8.cookie
 src/clover_lightnovel/output1.html
 *.pyc
+/src/resources/image/jm/*
+
+
+Elysia
+runtime
+/src/configs/tts
+bot.pid
