--- a/requirements_Elysia.txt
+++ b/requirements_Elysia.txt
@@ -2,6 +2,7 @@ aiofiles==24.1.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.14
 aiosignal==1.3.2
+aiosmtplib==4.0.0
 aiosqlite==0.21.0
 annotated-types==0.7.0
 anyio==4.9.0
