--- a/requirements_Elysia.txt
+++ b/requirements_Elysia.txt
@@ -4,6 +4,16 @@ aiohttp==3.11.14
 aiosignal==1.3.2
 aiosmtplib==4.0.0
 aiosqlite==0.21.0
+alibabacloud-bailian20231229==2.0.3
+alibabacloud-credentials==1.0.0
+alibabacloud-credentials-api==1.0.0
+alibabacloud-tea==0.4.3
+alibabacloud_endpoint_util==0.0.3
+alibabacloud_gateway_spi==0.0.3
+alibabacloud_openapi_util==0.2.2
+alibabacloud_tea_openapi==0.3.13
+alibabacloud_tea_util==0.3.13
+alibabacloud_tea_xml==0.0.2
 annotated-types==0.7.0
 anyio==4.9.0
 APScheduler==3.11.0
