--- a/.logging.conf
+++ b/.logging.conf
@@ -18,16 +18,16 @@ formatter=simpleFormatter
 args=(sys.stdout,)
 
 [handler_fileHandler]
-class=FileHandler
+class=handlers.TimedRotatingFileHandler
 level=INFO
 formatter=simpleFormatter
-args=("logs/app.log", "a")
+args=("logs/app.log", "midnight", 1, 7, encoding="utf-8")  ; 每天午夜切割，保留7天历史
 
 [handler_errorFileHandler]
-class=FileHandler
+class=handlers.TimedRotatingFileHandler
 level=ERROR
 formatter=simpleFormatter
-args=("logs/error.log", "a")
+args=("logs/error.log", "midnight", 1, 7, encoding="utf-8")  ; 每天午夜切割，保留7天历史
 
 [logger_root]
 level=INFO
