--- a/requirements_Elysia.txt
+++ b/requirements_Elysia.txt
@@ -47,6 +47,7 @@ graiax-silkcoder==0.3.6
 greenlet==3.1.1
 h11==0.14.0
 h2==4.2.0
+holidays==0.75
 hpack==4.1.0
 httpcore==1.0.7
 httptools==0.6.4
@@ -94,6 +95,7 @@ pymdown-extensions==10.14.3
 PyNaCl==1.5.0
 pypika-tortoise==0.5.0
 PySocks==1.7.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-markdown-math==0.8
 pytz==2025.1
