--- a/.logging.conf
+++ b/.logging.conf
@@ -21,13 +21,13 @@ args=(sys.stdout,)
 class=handlers.TimedRotatingFileHandler
 level=INFO
 formatter=simpleFormatter
-args=("logs/app.log", "midnight", 1, 7, encoding="utf-8")  ; 每天午夜切割，保留7天历史
+args=("logs/app.log", "midnight", 1, 7)
 
 [handler_errorFileHandler]
 class=handlers.TimedRotatingFileHandler
 level=ERROR
 formatter=simpleFormatter
-args=("logs/error.log", "midnight", 1, 7, encoding="utf-8")  ; 每天午夜切割，保留7天历史
+args=("logs/error.log", "midnight", 1, 7)
 
 [logger_root]
 level=INFO
