--- a/.logging.conf
+++ b/.logging.conf
@@ -21,13 +21,13 @@ args=(sys.stdout,)
 class=handlers.TimedRotatingFileHandler
 level=INFO
 formatter=simpleFormatter
-args=("logs/app.log", "midnight", 1, 7)
+args=("logs/app.log", "midnight", 1, 7, "utf-8")
 
 [handler_errorFileHandler]
 class=handlers.TimedRotatingFileHandler
 level=ERROR
 formatter=simpleFormatter
-args=("logs/error.log", "midnight", 1, 7)
+args=("logs/error.log", "midnight", 1, 7, "utf-8")
 
 [logger_root]
 level=INFO
